--- a/style.css
+++ b/style.css
@@ -6,3 +6,10 @@
 	/*height: 1000px;
 	width: 800px;*/
 }
+#world_map {top:50px;
+	bottom: 50px; 
+	left: 50px;
+	right: 50px;
+	/*height: 1000px;
+	width: 800px;*/
+}
