--- a/style.css
+++ b/style.css
@@ -1,15 +1,14 @@
 #aus_map {
-	top:50px;
-	bottom: 50px; 
-	left: 500px;
-	right: 50px;
+	position:absolute;
+	top:50px; 
+	left: 200px;
 	/*height: 1000px;
 	width: 800px;*/
 }
-#world_map {top:50px;
-	bottom: 50px; 
-	left: 500px;
-	right: 50px;
+#world_map {
+	position:absolute;
+	top:50px; 
+	left: 200px;
 	/*height: 1000px;
 	width: 800px;*/
 }
