--- a/style.css
+++ b/style.css
@@ -1,14 +1,12 @@
-aus_map {
-	position:absolute;
-	top:50px; 
-	left: 200px;
-	/*height: 1000px;
-	width: 800px;*/
+#aus_map {
+	position:absolute; 
+	left: 400px;
 }
-world_map {
+#world_map {
+	position:absolute; 
+	left: 400px;
+}
+h1 {
 	position:absolute;
-	top:50px; 
-	left: 200px;
-	/*height: 1000px;
-	width: 800px;*/
+	left: 400px
 }
