--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
+h1 {
+	position:relative;
+	left: 400px
+}
 #aus_map {
 	position:relative; 
 }
 #world_map {
-	width:80%;
-	height:50%;
-	position:relative; 
-	left: 400px;
-}
-h1 {
-	position:relative;
-	left: 400px
+	width:600;
+	height:400;
+	position:relative
 }
