--- a/style.css
+++ b/style.css
@@ -1,12 +1,18 @@
 h1 {
-	position:relative;
-	left: 400px
+	left: 100px;
+	right: 100px;
+	/*height: 1000px;
+	width: 800px;*/
 }
 #aus_map {
-	position:relative; 
+	left: 100px;
+	right: 100px;
+	/*height: 1000px;
+	width: 800px;*/
 }
 #world_map {
-	width:600;
-	height:400;
-	position:relative
+	left: 100px;
+	right: 100px;
+	/*height: 1000px;
+	width: 800px;*/
 }
